Making shopping system using four pillers of OOP

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 *.class
 /05-Self-learning/UniversitySystem/target/
 /05-Self-learning/RpgGame/target/
+/02-Labs/FlowControl/target/
+/03-Projects/StoreApp/target/
