--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /03-Projects/StoreApp/target/
 /03-Projects/TodoApp/target/
 /04-Playground/GeminiTest/target/
+/07-Assignments/FlowControlterative/target/
