Solving problems given by gemini

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /03-Projects/TodoApp/target/
 /04-Playground/GeminiTest/target/
 /07-Assignments/FlowControlterative/target/
+/05-Self-learning/ProblemSolvingGemini/target/
+/05-Self-learning/ProblemSolvingGemini2/target/
