Solving problems given by gemini

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /07-Assignments/FlowControlterative/target/
 /05-Self-learning/ProblemSolvingGemini/target/
 /05-Self-learning/ProblemSolvingGemini2/target/
+/05-Self-learning/Problem3Gemini/target/
