library-management-system-java-OOP

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /05-Self-learning/ProblemSolvingGemini/target/
 /05-Self-learning/ProblemSolvingGemini2/target/
 /05-Self-learning/Problem3Gemini/target/
+/03-Projects/LibraryManagementSystem/target/
