initial commit of Codex Library Management System

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /05-Self-learning/ProblemSolvingGemini2/target/
 /05-Self-learning/Problem3Gemini/target/
 /03-Projects/LibraryManagementSystem/target/
+/03-Projects/Codex/target/
