--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 /05-Self-learning/Problem3Gemini/target/
 /03-Projects/LibraryManagementSystem/target/
 /03-Projects/Codex/target/
+/03-Projects/ApexCapitalBank/target/
